Segundo commiter de Mar25Mar75

--- a/Prueba/Prueba/Templates/fecha_actual.html
+++ b/Prueba/Prueba/Templates/fecha_actual.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}La fecha actual{% endblock %}
 {% block content %}
-<p>La fecha de hoy es: {{ fecha_actual }}</p>
+<p>La fecha de hoy es: {{ fecha_actual }}!!!!!!!</p>
 {% endblock %}
